--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
+    "@mui/icons-material": "^5.16.1",
+    "@mui/material": "^5.16.1",
+    "@types/next-auth": "^3.15.0",
     "axios": "^1.7.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "node-fetch": "^3.3.2",
@@ -32,7 +40,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8",
     "prettier": "3.3.2",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.5",
     "typescript": "^5"
   }
 }
